--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -2,7 +2,7 @@
 title: "My title"
 subtitle: "My subtitle if needed"
 author: 
-  - First author
+  - Shan Lin
   - Another author
 thanks: "Code and data are available at: LINK."
 date: "`r format(Sys.time(), '%d %B %Y')`"
@@ -18,6 +18,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 library(tidyverse)
 library(palmerpenguins)
+
 ```
 
 # Introduction
@@ -100,8 +101,18 @@ Weaknesses and next steps should also be included.
 
 
 \newpage
+```{r}
+
+
+
+```
 
 
 # References
 
+
+
+
+
+ggg
 
